--- a/TPC_equipo-2/TPC_equipo-2/Site.Master
+++ b/TPC_equipo-2/TPC_equipo-2/Site.Master
@@ -23,6 +23,19 @@
                         Port Salut <span style="font-weight: 400;"> | Medicina privada</span>
                     </div>
                 </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#" style="color: #0364B8;">Turnos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="Configuracion.aspx" style="color: #0364B8;">Configuración</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div>
