--- a/TPC_equipo-2/TPC_equipo-2/Site.Master
+++ b/TPC_equipo-2/TPC_equipo-2/Site.Master
@@ -17,9 +17,9 @@
     <script type="text/javascript" src="Scripts/Scripts.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
-    <div class="container-fluid flex-grow-1">
+    <div>
         <form id="form1" runat="server">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100">
                 <div class="container-fluid">
                     <a class="d-flex justify-content-center align-items-center gap-1 navbar-brand" href="#">
                         <img width="24" height="24" src="https://img.icons8.com/material/24/0364B8/heart-with-pulse.png" alt="heart-with-pulse" />
@@ -100,7 +100,7 @@
                     %>
                 </div>
             </nav>
-            <div>
+            <div class="container-fluid flex-grow-1">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
