Agregado de boton visible para cerrar sesion

--- a/TPC_equipo-2/TPC_equipo-2/Site.Master
+++ b/TPC_equipo-2/TPC_equipo-2/Site.Master
@@ -49,8 +49,11 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="Configuracion.aspx" style="color: #0364B8;">Configuración</a>
                             </li>
+                            <li class="nav-item pe-2">
+                                <p class="nav-link active" style="color: #0364B8;"> | </p>
+                            </li>
                             <li class="nav-item">
-                                <a class="nav-link link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" href="Login.aspx">Cerrar Sesión</a>
+                                <a class="btn btn-color-project-primary" aria-current="page" href="Login.aspx">Cerrar Sesión</a>
                             </li>
                         </ul>
                     </div>
@@ -67,8 +70,11 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="Turnos.aspx" style="color: #0364B8;">Turnos</a>
                             </li>
+                            <li class="nav-item pe-2">
+                                <p class="nav-link active" style="color: #0364B8;">| </p>
+                            </li>
                             <li class="nav-item">
-                                <a class="nav-link link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" href="Login.aspx">Cerrar Sesión</a>
+                                <a class="btn btn-color-project-primary" aria-current="page" href="Login.aspx">Cerrar Sesión</a>
                             </li>
                         </ul>
                     </div>
@@ -81,8 +87,11 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="Turnos.aspx" style="color: #0364B8;">Turnos</a>
                             </li>
+                            <li class="nav-item pe-2">
+                                <p class="nav-link active" style="color: #0364B8;">| </p>
+                            </li>
                             <li class="nav-item">
-                                <a class="nav-link link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" href="Login.aspx">Cerrar Sesión</a>
+                                <a class="btn btn-color-project-primary" aria-current="page" href="Login.aspx">Cerrar Sesión</a>
                             </li>
                         </ul>
                     </div>
